# mini_turtle_task

./: LICENSE  README.md  main.py  pyproject.toml
mini_turtle/: __init__.py  drawer_logic.py
